--- a/G3-Seg-page/package.json
+++ b/G3-Seg-page/package.json
@@ -12,11 +12,14 @@
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "styled-components": "^6.0.3"
+    "react-hook-form": "^7.45.4",
+    "styled-components": "^6.0.3",
+    "validator": "^13.11.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.14",
     "@types/react-dom": "^18.2.6",
+    "@types/validator": "^13.11.1",
     "@typescript-eslint/eslint-plugin": "^5.61.0",
     "@typescript-eslint/parser": "^5.61.0",
     "@vitejs/plugin-react": "^4.0.1",
