--- a/G3-Seg-page/package.json
+++ b/G3-Seg-page/package.json
@@ -12,8 +12,10 @@
   "dependencies": {
     "@emailjs/browser": "^3.11.0",
     "react": "^18.2.0",
+    "react-anchor-link-smooth-scroll": "^1.0.12",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.45.4",
+    "react-router-dom": "^6.15.0",
     "styled-components": "^6.0.3",
     "validator": "^13.11.0"
   },
