--- a/G3-Seg-page/package.json
+++ b/G3-Seg-page/package.json
@@ -11,13 +11,15 @@
   },
   "dependencies": {
     "@emailjs/browser": "^3.11.0",
+    "@hookform/error-message": "^2.0.1",
+    "@types/styled-components": "^5.1.26",
     "react": "^18.2.0",
     "react-anchor-link-smooth-scroll": "^1.0.12",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.45.4",
     "react-router-dom": "^6.15.0",
     "styled-components": "^6.0.3",
-    "sweetalert2": "^11.7.23",
+    "sweetalert2": "^11.7.27",
     "validator": "^13.11.0"
   },
   "devDependencies": {
