--- a/G3-Seg-page/package.json
+++ b/G3-Seg-page/package.json
@@ -20,7 +20,8 @@
     "react-router-dom": "^6.15.0",
     "styled-components": "^6.0.3",
     "sweetalert2": "^11.7.27",
-    "validator": "^13.11.0"
+    "validate.js": "^0.13.1"
+    
   },
   "devDependencies": {
     "@types/react": "^18.2.14",
