--- a/G3-Seg-page/package.json
+++ b/G3-Seg-page/package.json
@@ -27,6 +27,7 @@
   },
   "devDependencies": {
     "@types/react": "^18.2.14",
+    "@types/react-anchor-link-smooth-scroll": "^1.0.2",
     "@types/react-dom": "^18.2.6",
     "@types/validator": "^13.11.1",
     "@typescript-eslint/eslint-plugin": "^5.62.0",
